# qgroundcontrol

./: .gitmodules  CMakeLists.txt  qgroundcontrol.qrc
docs/en/qgc-dev-guide/custom_build/: mavlink.md
docs/ko/qgc-dev-guide/custom_build/: mavlink.md
libs/mavlink/: .gitmodules
libs/mavlink/message_definitions/v1.0/: all.xml  hylight.xml
src/AnalyzeView/: MAVLinkMessage.cc
src/FlightDisplay/: FlyViewWidgetLayer.qml
src/FlightMap/Widgets/: WindRoseWidget.qml
src/MAVLink/: CMakeLists.txt  MAVLinkLib.h  QGCMAVLink.cc
src/QmlControls/QGroundControl/FlightMap/: qmldir
src/Settings/: FlyView.SettingsGroup.json  FlyViewSettings.cc  FlyViewSettings.h
src/UI/preferences/: FlyViewSettings.qml
src/Vehicle/: Vehicle.cc  Vehicle.h
src/Vehicle/FactGroups/: CMakeLists.txt  PressureFact.json  VehiclePressureFactGroup.cc  VehiclePressureFactGroup.h  VehicleWindFactGroup.cc  VehicleWindFactGroup.h  WindFact.json
